[package]
name = "acix-todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
actix-rt = "2.7.0"
listenfd = "1.0.0"
serde = "1.0"
serde_json = "1.0"
dotenv = "0.15.0"
env_logger = "0.9.1"
diesel = { version = "2.0.0", features = ["postgres", "r2d2", "uuid", "chrono"] }
diesel_migrations = "2.0.0"
uuid = { version = "1.1.2", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
r2d2 = "0.8"
lazy_static = "1.4"